<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".phone_form">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="547dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/design_default_color_on_primary"
            android:onClick="call_cricket"
            android:text="@string/cricket_btn"
            android:textSize="40sp" />


        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/design_default_color_on_primary"
            android:onClick="call_elections_helpline"
            android:text="@string/ballot_btn"
            android:textSize="40sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/design_default_color_on_primary"
            android:onClick="call_weather"
            android:text="@string/weather_btn"
            android:textSize="40sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/design_default_color_on_primary"
            android:onClick="call_ambulance"
            android:text="@string/ambulence_btn"
            android:textSize="40sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/design_default_color_on_primary"
            android:onClick="call_fire_truck"
            android:text="@string/fire_btn"
            android:textSize="40sp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/design_default_color_on_primary"
            android:onClick="call_cops"
            android:text="@string/police_btn"
            android:textSize="40sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="61dp"
        android:text="Button" />

</RelativeLayout>