<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:text="Hello World!"
        android:textAlignment="center"
        android:textSize="22sp" />

    <Button
        android:id="@+id/mike_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@color/design_default_color_on_primary"


        android:onClick="btnspeech"
        android:text="@string/mike"
        android:textColor="@color/cardview_dark_background"
        android:textSize="50sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="88dp"
        android:layout_marginTop="449dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="133dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@color/design_default_color_on_primary"
        android:onClick="opengoogleassist"
        android:text="@string/search_btn"
        android:textColor="@color/cardview_dark_background"
        android:textSize="50sp" />

    <Button
        android:id="@+id/callbutton"
        android:layout_width="125dp"
        android:layout_height="141dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="487dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@color/design_default_color_on_primary"
        android:onClick="go_to_call_list"
        android:text="@string/call_btn"
        android:textColor="@color/cardview_dark_background"
        android:textSize="50sp" />
    />
</RelativeLayout>